--- a/web/src/main/resources/templates/login/login.html
+++ b/web/src/main/resources/templates/login/login.html
@@ -20,7 +20,7 @@
                     <div class="form-group">
                       <label for="username" class="col-sm-2 control-label">UserName</label>
                       <div class="col-sm-10">
-                        <input type="input" class="form-control" id="userName" name="userName" placeholder="admin">
+                        <input type="input" class="form-control" id="userName" name="name" placeholder="admin">
                       </div>
                     </div>
                     <div class="form-group">
@@ -29,11 +29,11 @@
                         <input type="password" class="form-control" id="password" name="password" placeholder="Password">
                       </div>
                     </div>
-                    <div class="form-group" hidden="hidden">
+                    <div class="form-group" >
                       <div class="col-sm-offset-2 col-sm-10">
                         <div class="checkbox">
                           <label>
-                            <input type="checkbox"> Remember me
+                            <input type="checkbox" name="admin"> admin
                           </label>
                         </div>
                       </div>
