add error log and permission controller

--- a/web/src/main/resources/templates/shared/layout.html
+++ b/web/src/main/resources/templates/shared/layout.html
@@ -9,7 +9,7 @@
     <script th:src="@{/js/jquery-1.10.2.js}"></script>
     <script th:src="@{/js/bootstrap.js}"></script>
     <script th:src="@{/js/echarts.min.js}"></script>
-
+    <script th:src="@{/js/vue.min.js}"></script>
 </head>
 <body>
 <div class="container-fluid" style="position: fixed; width: 100%; z-index: 10; ">
